--- a/help/nemp-help-en.tex
+++ b/help/nemp-help-en.tex
@@ -1,8 +1,7 @@
 \documentclass[a4paper, 12pt]{article}
-\usepackage{german, amssymb, amsmath}
+\usepackage{ amssymb, amsmath}
 
 \usepackage[latin1]{inputenc}
-
 
 \usepackage{theorem}
 
@@ -19,7 +18,7 @@
 
 
 \newcommand{\tweak}{\hspace*{1.5pt}}
-\newcommand{\gf}[1]{\glqq {#1}\grqq}
+\newcommand{\gf}[1]{``{#1}''}
 
 %\parindent 0pt
 %\parskip 6pt
@@ -62,7 +61,8 @@ citecolor = black] {hyperref}
 	\vspace{1cm}
 	\includegraphics[width=0.5\textwidth]{nemp.jpg}\par
 	\vspace{1cm}
-	{\Large Documentation and user guide\par}		
+	{\Large Documentation and user guide\par}	
+	\emph{This documentation was mainly translated with the help of \emph{deepl.com}. I hope it is reasonably understandable and does not contain too much gibberish.}	
 	\vfill	
 	\copyright Daniel Gauﬂmann, 2005-2017
 \end{titlepage}
@@ -1278,7 +1278,7 @@ If no matches were found for a search term, this may also be due to typing error
 
 \section{Version history}
 
-The following is a summary of the new features in the individual versions - from the current version to the very first version of this program, which at that time was not even a player.
+The following is a summary of the new features in the individual versions - from the current version to the very first version of this program, which at that time was not even a player. In this section you will find the main new features and noteworthy bugfixes, but not a complete list of all changes.
 
 \subsection*{Version 4.7.0, October 2017}
 
@@ -1402,9 +1402,6 @@ The following is a summary of the new features in the individual versions - from
 \item Ratings were not saved to the ID3 tag if the Playback counter was set to 0
 \end{itemize}
 
-
-\subsection*{Version 4.0.0, May-July 2010: Nemp becomes Open-Source}
-
 \begin{figure}[tbh]
 \centering
 \includegraphics[width=0.7\textwidth]{v4_0.jpg}
@@ -1412,6 +1409,7 @@ The following is a summary of the new features in the individual versions - from
 \label{fig_4.0}
 \end{figure}
 
+\subsection*{Version 4.0.0, May-July 2010: Nemp becomes Open-Source}
 
 \begin{itemize}
 \item Change of the license from Freeware to Open Source: Nemp is now available under the GPL
@@ -1593,8 +1591,6 @@ The following is a summary of the new features in the individual versions - from
 \item The deskband didn't display the commercial and (\&) correctly
 \end{itemize}
 
-\subsection*{Version 3.0.0, October 2007: Almost completely reworked}
-
 \begin{figure}[tbh]
 \centering
 \includegraphics[width=0.7\textwidth]{v3_0.jpg}
@@ -1602,6 +1598,8 @@ The following is a summary of the new features in the individual versions - from
 \label{fig_3.0}
 \end{figure}
 
+
+\subsection*{Version 3.0.0, October 2007: Almost completely reworked}
 
 \textbf{New features}
 \begin{itemize}
@@ -1670,9 +1668,6 @@ The following is a summary of the new features in the individual versions - from
 \item Skin setting: Align wallpaper on desktop or middle part of the player
 \end{itemize}
 
-
-\subsection*{Version 2.5, September 2006}
-
 \begin{figure}[tbh]
 \centering
 \includegraphics[width=0.7\textwidth]{v2_5.jpg}
@@ -1680,6 +1675,7 @@ The following is a summary of the new features in the individual versions - from
 \label{fig_2.5}
 \end{figure}
 
+\subsection*{Version 2.5, September 2006}
 
 \textbf{New features}
 
@@ -1754,7 +1750,6 @@ The following is a summary of the new features in the individual versions - from
 \item Better suppport for m3u playlists
 \end{itemize}
 
-\subsection*{Version 2.1, February 2006: Nemp becomes an mp3 player}
 
 \begin{figure}[tbh]
 \centering
@@ -1762,6 +1757,9 @@ The following is a summary of the new features in the individual versions - from
 \caption{The first Nemp}
 \label{fig_2.1}
 \end{figure}
+
+
+\subsection*{Version 2.1, February 2006: Nemp becomes an mp3 player}
 
 \textbf{Major Updates/Changes: }
 \begin{itemize}
