minor changes, mostly string-related stuff

--- a/help/nemp-help-de.tex
+++ b/help/nemp-help-de.tex
@@ -187,7 +187,7 @@ Die einzelnen Fenster docken auch aneinander an und können dann über den Player-
 \label{fig_einzelfenster}
 \end{figure}
 
-\subsubsection{Fehlerbehebung}
+\subsubsection*{Fehlerbehebung}
 
 Diese Funktion ist zwar ganz hübsch, aber leider auch immer wieder mal die Ursache für eine ganze Reihe Fehler, die ich nicht wirklich in den Griff bekomme. Was auch daran liegt, dass Windows solche Sperenzchen eigentlich nicht mag.
 
@@ -197,7 +197,7 @@ Daher, für den Fall, dass regelmäßig \gf{merkwürdige} Fehler auftreten:
 \item das \emph{Erweiterte Skinsystem} deaktivieren. Dann scheint zwar an einigen Stellen das Windows-Layout durch, aber die meisten Ursachen für Abstürze werden dadurch behoben.
 \end{itemize}
 
-\subsubsection{Party-Modus}
+\subsection{Party-Modus}
 \label{sec_partmode}
 
 Der Party-Modus war im Grunde eine buchstäbliche Schnapsidee. Wenn Nemp auf einer Party läuft und die Beschallung übernimmt, dann werden nach ein paar (oder ein paar mehr) Bierchen die Buttons ziemlich klein und sind nur noch schwer zu treffen. Im Party-Modus werden sie größer.
