--- a/help/nemp-help-en.tex
+++ b/help/nemp-help-en.tex
@@ -178,7 +178,7 @@ The individual windows dock together and can then be moved together using the pl
 \label{fig_einzelfenster}
 \end{figure}
 
-\subsection{Troubleshooting}
+\subsubsection*{Troubleshooting}
 
 This function is quite nice, but unfortunately it's also the reason for a lot of errors, which I can't really get a handle on. Which is also because Windows doesn't really like such shenanigans.
 
@@ -188,7 +188,7 @@ Therefore, in case of regular \gf{odd} errors occur:
 \item disable the \emph{advanced skinsystem}. Then the Windows layout will shine through in some places, but most of the causes of crashes will be fixed.
 \end{itemize}
 
-\subsubsection{Party mode}
+\subsection{Party mode}
 \label{sec_partmode}
 
 The party mode was basically a literal crazy idea. If Nemp runs on a party and takes over the sound system, then after a few (or a few more) beers the buttons become quite small and are hard to hit. In Party mode, they get bigger.
@@ -222,7 +222,7 @@ This method works very well in most cases, but has one gap: If you have your com
 
 Nemp has a lot of interesting features. Some of them are very useful (at least I think so), but some of them change your music files, or look for additional information on the Internet.
 
-\begin{wrapfigure}{R}{0.2\textwidth}
+\begin{wrapfigure}{R}{0.21\textwidth}
 \centering
 \includegraphics[width=0.2\textwidth]{wizard.png}
 \end{wrapfigure}
@@ -238,7 +238,7 @@ For the following actions, the Nemp Wizard will ask for permission:
 
 \item Automatic rating: Nemp can automatically adjust the rating of your music files. If you listen to a song often, it is likely that you like it. If you break it off, it is probably not that great. The rating is also written to the metadata of the file. 
 
-\item Download missing covers: If no suitable cover for a music file can be found on the hard disk, Nemp can try to download a cover from the internet via the last.fm web service. This is then stored in the Nemp cover folder, and as \texttt{front (NempAutoCover). jpg} (or \texttt{*. png}) in the directory where the music file itself is located. 
+\item Download missing covers: If no suitable cover for a music file can be found on the hard disk, Nemp can try to download a cover from the internet via the last.fm web service. This is then stored in the Nemp cover folder, and as \texttt{front (NempAutoCover).jpg} (or \texttt{.png}) in the directory where the music file itself is located. 
 
 \item Nemp as default player: Register Nemp as the default player for Windows. Under Windows 10 this doesn't  work 100\% - Windows will probably ask you again with which \emph{App} you want to open an mp3-file.
 \end{itemize}
@@ -1081,7 +1081,7 @@ Nemp can simulate this behavior. If Nemp is running on a laptop that is not conn
 \end{itemize}
 
 
-\subsubsection{Events}
+\subsubsection{Birthday mode}
 
 See section \hyperref[sec_birthday]{Tools - The birthday mode}.
 
