--- a/help/nemp-help-de.tex
+++ b/help/nemp-help-de.tex
@@ -1262,7 +1262,14 @@ Wenn für einen Suchbegriff kein Treffer gefunden wurde, kann das auch an Tippfeh
 
 Im Folgenden eine Zusammenfassung der Neuerungen in den einzelnen Versionen - von der aktuell vorliegenden bis hin zur allerersten Version dieses Programmes, das damals noch gar kein Player war. In diesem Abschnitt finden Sie die wesentlichen Neuerungen und nennenswerten Bugfixes, aber keine vollständige Liste aller Änderungen.
 
-\subsection*{Version 4.7.0, August 2017}
+\subsection*{Version 4.7.1, November 2017}
+
+\textbf{Bugfix}
+\begin{itemize}
+\item Zugriffsverletzung beim Stöbern in Wiedergabelisten behoben
+\end{itemize}
+
+\subsection*{Version 4.7.0, Oktober 2017}
 
 \textbf{Neue Funktionen}
 \begin{itemize}
