--- a/help/nemp-help-en.tex
+++ b/help/nemp-help-en.tex
@@ -1280,6 +1280,14 @@ If no matches were found for a search term, this may also be due to typing error
 
 The following is a summary of the new features in the individual versions - from the current version to the very first version of this program, which at that time was not even a player. In this section you will find the main new features and noteworthy bugfixes, but not a complete list of all changes.
 
+\subsection*{Version 4.7.1, November 2017}
+
+\textbf{Bug fix}
+\begin{itemize}
+\item fixed an access violation when browsing playlists
+\end{itemize}
+
+
 \subsection*{Version 4.7.0, October 2017}
 
 \textbf{New features}
